--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,6 @@
         <title>Velkommen til nginx</title>
     </head>
     <body>
-        <p>Hilsen fra nginx i Docker container!</p>
+        <h1>Welcome to this website</h1>
     </body>
 </html>
